style change & other

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,8 +1,4 @@
 @mixin input {
-	// border-top-right-radius: 25px;
-	// border-bottom-right-radius: 25px;	
-	// border-top-left-radius: 5px;
-	// border-bottom-left-radius: 5px;	
 	color: $fnt-color-input;
 	background-color: $bcg-color-input;			
 	border-radius: 10px;
@@ -25,4 +21,17 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+
+@mixin styleVariable {
+	&-0{
+		background-color: $bcg-color-form-0;
+	}
+	&-1{
+		background-color: $bcg-color-form-1;
+	}
+	&-2{
+		background-color: $bcg-color-form-2;		
+	}
 }
