--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,9 +1,21 @@
 $fnt-size-regular: 16px;
-
+$fnt-size-small: 12px;
 
 $fnt-color-form: rgba(255,255,255,0.75);
-$bcg-color-form: #25b99a;
+
+
+$bcg-color-form:#25b99a;
+$bcg-color-form-0: #25b99a;
+$bcg-color-form-1:#5c8385;
+$bcg-color-form-2:rgb(255, 174, 0);
+// $bcg-color-form-2:rgba(100, 78.8, 32.9, .7);
+
 $bcg-color-input: rgba(255, 255, 255 ,0.2);
 
-$fnt-color-input: rgba(255,255,255,0.75);
+$fnt-color-input: rgba(255,255,255,0.25);
+$fnt-weight-light: 400;
 $fnt-weight-regular: 700;
+$fnt-weight-heavy: 900;
+
+$fnt-fam: 'Merriweather', serif;
+
