--- a/scss/utilities/_reset.scss
+++ b/scss/utilities/_reset.scss
@@ -159,3 +159,15 @@ button,
 a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
+
+h1{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
