--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -38,7 +38,7 @@
 		@include input;
 		padding-left: 15px;
 		&::-webkit-input-placeholder {
-			color: $fnt-color-input;
+			color: $fnt-color-form;
 		} 
 	}
 }
