--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -13,7 +13,8 @@ body {
 			background-image: linear-gradient(to left, #204d61, #5c8385, #a4baae);
 		}
 		&-2{
-			background-image: linear-gradient(to left, rgba(255,255,255,1) 0%, rgba(253,187,45,.51) 100%);
+			background-image: linear-gradient(to left, rgba(255,255,255,1) 0%, rgba(171, 171, 0,.51) 100%);
+			
 		}
 		background-repeat: no-repeat;
 		background-attachment: fixed;
